[metadata]
name = hardware
summary = Hardware detection and classification utilities
description-file =
    README.rst
author = eNovance
author-email = licensing@enovance.com
home-page = http://www.enovance.com/
classifier =
    Topic :: System :: Hardware
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    hardware

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = hardware/locale
domain = hardware

[update_catalog]
domain = hardware
output_dir = hardware/locale
input_file = hardware/locale/hardware.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = hardware/locale/hardware.pot
