[metadata]
name = hardware
summary = Hardware detection and classification utilities
description_file =
    README.rst
author = eNovance
author_email = licensing@enovance.com
home_page = https://github.com/redhat-cip/hardware
python_requires = >=3.8
classifier =
    Topic :: System :: Hardware
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[files]
packages =
    hardware

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = hardware/locale
domain = hardware

[update_catalog]
domain = hardware
output_dir = hardware/locale
input_file = hardware/locale/hardware.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = hardware/locale/hardware.pot

[entry_points]
console_scripts =
    hardware-detect = hardware.detect:main
